# ml-chat

./: .gitignore  README.md  pyproject.toml
src/: fetch.py  openai_bit.py
